examples/test/testpolicy15983.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15983
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key10: value12
      key13: value15
      key24: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value40
          key23: value8
          key13: value49
      podSelector:
        matchLabels:
          key17: value12
          key43: value42
          key32: value0
